style: structure by question

--- a/source/Descriptives on NPIs for COVID-19.ipynb
+++ b/source/Descriptives on NPIs for COVID-19.ipynb
@@ -782,12 +782,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Which unique kinds of interventions did US counties implement?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 841,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Which unique kinds of interventions do we have?\n",
     "npis_kind = [\"CPV\", \"GS\", \"LD\", \"NESC\", \"PC\", \"SDA\", \"SDO\"]"
    ]
   },
@@ -2441,7 +2447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cluster counties by policies"
+    "## In which order and at which point of the spread of COVID-19 did counties take on the NPIs?"
    ]
   },
   {
